fixed horizontal scroll and updated 404 copyright notice

--- a/assets/css/intvstyle.scss
+++ b/assets/css/intvstyle.scss
@@ -33,9 +33,9 @@ a {
 
 .intvfooter {
 	text-align: center;
-	width: 100vw;
 	color: #525252;
     font-size: 0.8em;
+    margin-bottom: .5em;
 }
 
 .intvbutton {
