--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8960,9 +8960,9 @@ a {
 
 .intvfooter {
   text-align: center;
-  width: 100vw;
   color: #525252;
   font-size: 0.8em;
+  margin-bottom: 0.5em;
 }
 
 .intvbutton {
